--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "canvas": "^2.8.0",
     "flooks": "^4.0.2",
     "hox": "^1.1.4",
+    "marked": "^2.1.3",
     "moment": "^2.29.1",
     "pg": "^8.7.1",
     "pg-native": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-html-parser": "^2.0.2",
     "react-markdown": "^6.0.3",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
