--- a/package.json
+++ b/package.json
@@ -3,31 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@ant-design/charts": "^1.2.5",
     "@antv/f2": "^3.8.9",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.16.11",
+    "antd": "^4.16.12",
     "antd-mobile": "^2.3.4",
-    "bizcharts": "^4.1.11",
     "bizgoblin": "^0.2.0",
-    "canvas": "^2.8.0",
-    "flooks": "^4.0.2",
-    "hox": "^1.1.4",
-    "marked": "^2.1.3",
+    "marked": "^3.0.0",
     "moment": "^2.29.1",
-    "pg": "^8.7.1",
-    "pg-native": "^3.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-html-parser": "^2.0.2",
-    "react-markdown": "^6.0.3",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "remark-gfm": "^2.0.0",
-    "web-vitals": "^1.1.2"
+    "react-router-dom": "^5.2.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
