--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "后台工具集",
+  "name": "策略数据, 轻松访问",
   "icons": [
     {
       "src": "icon.ico",
