--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@antv/f2": "^3.8.9",
-    "antd": "^4.16.12",
+    "@ant-design/icons": "^4.6.3",
+    "antd": "^4.16.13",
     "antd-mobile": "^2.3.4",
-    "bizgoblin": "^0.2.0",
+    "bizcharts": "^4.1.11",
+    "html-react-parser": "^1.2.8",
     "marked": "^3.0.0",
     "moment": "^2.29.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-html-parser": "^2.0.2",
-    "react-router-dom": "^5.2.0"
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-router-dom": "^5.2.0",
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
