--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd-mobile": "^2.3.4",
     "bizcharts": "^4.1.11",
     "html-react-parser": "^1.2.8",
+    "klinecharts": "^8.3.5",
     "marked": "^3.0.0",
     "moment": "^2.29.1",
     "react": "^16.14.0",
